add weather image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <input type="text" id="city-input" placeholder="Enter City" />
         <input type="submit" value="Get Weather" id="button" class="button" />
       </form>
+      <div id="weather-data">
+        <div class="icon">
+          <img
+            src="http://openweathermap.org/img/wn/01d.png"
+            alt="weather image"
+          />
+        </div>
+        <div class="temperature">22C</div>
+      </div>
     </div>
   </body>
 </html>
