added html details

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
           />
         </div>
         <div class="temperature">22C</div>
+        <div class="description">Sunny</div>
+        <div class="details">
+          <div>Feels like: 23C</div>
+          <div>Humidity: 40%</div>
+          <div>Wind Speed: 5 m/s</div>
+        </div>
       </div>
     </div>
   </body>
